@@ -16,11 +16,11 @@ import warnings
 import numpy
 from scipy.special import sph_harm
 
-__version__   = '0.5'
+__version__   = '0.6'
 __revision__ = '$Rev$'
 __all__ = ['regrid', 'downsample', 'smooth', 'cmagnitude', 'cphase', 'cpolar', 'crect', 
-           'creal', 'cimag', 'to_dB', 'from_dB', 'ndft',  'savitzky_golay', 'gaussian1d', 
-           'gaussian2d', 'gaussparams', 'sphfit', 'sphval']
+           'creal', 'cimag', 'to_dB', 'from_dB', 'ndft',  'gaussian1d', 'gaussian2d', 
+           'gaussparams', 'sphfit', 'sphval']
 __author__    = 'P. S. Ray'
 __maintainer__ = 'Jayce Dowell'
 
@@ -268,73 +268,6 @@ def ndft(t, x):
         
     # Done
     return f, out
-
-
-def savitzky_golay(y, window_size, order, deriv=0):
-    """
-    Smooth (and optionally differentiate) data with a Savitzky-Golay filter.
-    The Savitzky-Golay filter removes high frequency noise from data.  It has 
-    the advantage of preserving the original shape and features of the signal 
-    better than other types of filtering approaches, such as moving averages 
-    techhniques.
-
-    Parameters:
-      * y: array_like, shape (N,) = the values of the time history of the signal.
-      * window_size: int = the length of the window. Must be an odd integer number.
-      * order: int = the order of the polynomial used in the filtering.  Must be 
-                     less then `window_size` - 1.
-      * deriv: int = the order of the derivative to compute (default = 0 means 
-                     only smoothing)
-
-    Returns:
-      * ys: ndarray, shape (N) = the smoothed signal (or it's n-th derivative).
-
-    Notes:
-        The Savitzky-Golay is a type of low-pass filter, particularly suited for 
-        smoothing noisy data. The main idea behind this approach is to make for each 
-        point a least-square fit with a polynomial of high order over a odd-sized 
-        window centered at the point.
-
-    Examples:
-        >>> t = numpy.linspace(-4, 4, 500)
-        >>> y = numpy.exp( -t**2 ) + numpy.random.normal(0, 0.05, t.shape)
-        >>> ysg = savitzky_golay(y, window_size=31, order=4)
-        >>> import matplotlib.pyplot as plt
-        >>> plt.plot(t, y, label='Noisy signal')
-        >>> plt.plot(t, numpy.exp(-t**2), 'k', lw=1.5, label='Original signal')
-        >>> plt.plot(t, ysg, 'r', label='Filtered signal')
-        >>> plt.legend()
-        >>> plt.show()
-
-    References:
-    1. A. Savitzky, M. J. E. Golay, Smoothing and Differentiation of Data by 
-        Simplified Least Squares Procedures. Analytical Chemistry, 1964, 36 (8), 
-        pp 1627-1639.
-    2. Numerical Recipes 3rd Edition: The Art of Scientific Computing W.H. Press,
-        S.A. Teukolsky, W.T. Vetterling, B.P. Flannery Cambridge University Press 
-        ISBN-13: 9780521880688
-    """
-
-    try:
-        window_size = numpy.abs(numpy.int(window_size))
-        order = numpy.abs(numpy.int(order))
-    except ValueError as msg:
-        raise ValueError("window_size and order have to be of type int")
-    if window_size % 2 != 1 or window_size < 1:
-        raise TypeError("window_size size must be a positive odd number")
-    if window_size < order + 2:
-        raise TypeError("window_size is too small for the polynomials order")
-    order_range = range(order+1)
-    half_window = (window_size -1) // 2
-    # precompute coefficients
-    b = numpy.mat([[k**i for i in order_range] for k in range(-half_window, half_window+1)])
-    m = numpy.linalg.pinv(b).A[deriv]
-    # pad the signal at the extremes with
-    # values taken from the signal itself
-    firstvals = y[0] - numpy.abs( y[1:half_window+1][::-1] - y[0] )
-    lastvals = y[-1] + numpy.abs(y[-half_window-1:-1][::-1] - y[-1])
-    y = numpy.concatenate((firstvals, y, lastvals))
-    return numpy.convolve( m, y, mode='valid')
 
 
 def gaussian1d(height, center, width):
