@@ -10,7 +10,8 @@
   * Added support for reading CASA measurement sets with multiple spectral windows
   * Added test suites for CASA measurement set support when the 'casacore' module is found
   * Added support for astorpy.units.quantity.Quantity instances to lsl.misc.rfutil
-
+  * Removed lsl.misc.mathutil.savitzky_golay since it was added in scipy v0.14.0+
+  
 1.2.5
   * Updated setup.py to make it more likely that clang will build OpenMP-enabled extensions
   * Updated the install documentation to recommend pip
